--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </svg>
         </button>
       </div>
-      <div class="mob-menu is-open">
+      <div class="mob-menu">
         <div>
           <button type="button" class="header-btn-close">
             <svg class="button-close" width="8" height="8">
@@ -69,11 +69,15 @@
           </button>
           <nav>
             <ul class="nav-list-mob">
-              <li>
+              <li class="mob-menu-item">
                 <a class="nav-link-mob-studio" href="./index.html">Studio</a>
               </li>
-              <li><a class="nav-link-mob" href="">Portfolio</a></li>
-              <li><a class="nav-link-mob" href="">Contacts</a></li>
+              <li class="mob-menu-item">
+                <a class="nav-link-mob" href="">Portfolio</a>
+              </li>
+              <li class="mob-menu-item">
+                <a class="nav-link-mob" href="">Contacts</a>
+              </li>
             </ul>
           </nav>
         </div>
